--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,54 @@
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,400;0,700;1,200&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: 'Titillium Web', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
+  color: #0070f3;
   text-decoration: none;
 }
 
 * {
   box-sizing: border-box;
+}
+
+*:hover {
+  transition: color 0.15s ease, border-color 0.15s ease;
+}
+
+main {
+  padding: 5rem 0;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 800px;
+  margin: 1rem auto;
+}
+
+button {
+  font-family: 'Titillium Web';
+  font-size: 1rem;
+  border: 2px solid black;
+  background: #fff;
+  cursor: pointer;
+}
+
+button:hover {
+  color: #0070f3;
+}
+
+hr {
+  border: solid 1px #000;
+  width: 50%;
+}
+
+ul {
+  margin-left: 0;
+  padding-left: .5rem;
 }
