--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,30 +1,5 @@
-.container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.header{
-  min-width: 100vw;
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-  border-bottom: 1px solid #eaeaea;
-  font-size: 1.25rem;
-  text-transform: uppercase;
-  letter-spacing: 0.4;
-}
-.brand {
-  margin: 1rem;
-}
 
-.nav a {
-  margin-right: 2rem;
-  color: #000;
-  border-bottom: 2px solid #000;
-}
+
 .hero {
   background: url('../public/hero.png') center;
   background-size: contain;
@@ -120,13 +95,25 @@
   margin-bottom: 1rem;
 }
 
-.logo {
-  height: 1em;
+
+@media (max-width: 660px) {
+  .new {
+    max-width: fit-content;
+  }
+  .new p {
+    font-size: 1.5rem;
+  }
+  .grid {
+    max-width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 1rem;
+    align-items: flex-start;
+  }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 500px) {
   .grid {
-    width: 100%;
-    flex-direction: column;
+    grid-template-columns: 1fr;
   }
 }
