--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,7 @@ a {
 }
 
 main {
-  padding: 5rem 0;
+  padding: 3rem 1rem;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -51,4 +51,14 @@ hr {
 ul {
   margin-left: 0;
   padding-left: .5rem;
+}
+
+.container {
+  min-height: 100vh;
+  padding: 0 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: auto;
 }
